--- a/main_branch/pages/Notes.html
+++ b/main_branch/pages/Notes.html
@@ -59,27 +59,18 @@
                     <span class="content">ldvcbndsfijvd</span>
                 </div>
                 <div>
-                    <nav class="config_nav">
+                    <nav class="config_nav" id="AAAA">
                         <a href="#" class="opt">
                             <span class="material-symbols-outlined">edit</span>
                         </a>
-                        <a href="#" class="opt">
+                        <a href="#" class="opt" onclick="deleteNote(this)">
                             <span class="material-symbols-outlined">delete</span>
                         </a>
-                        <a href="#" class="opt">
+                        <a href="#" class="opt" onclick="setNoteName(this)">
                             <span class="material-symbols-outlined">download</span>
                         </a>
                     </nav>
                 </div>
-
-                <!-- <div class="conf_dropdown">
-                    <span class="material-symbols-outlined" style="position: absolute;">menu</span>
-                    <nav>
-                        <a href="" class="opt">pob</a>
-                        <a href="" class="opt">pob</a>
-                        <a href="" class="opt">pob</a>
-                    </nav>
-                </div> -->
             </div>
         </div>
     </section>
