upload main atualizado
arruma o bug da nota que apaga tudo

--- a/main_branch/pages/Notes.html
+++ b/main_branch/pages/Notes.html
@@ -53,26 +53,8 @@
         <h2>Notas</h2>
         <br>
         <div id="notes_list">
-            <div class="note">
-                <div>
-                    <strong><span class="title">Documento</span></strong>
-                    <br>
-                    <span class="content">ldvcbndsfijvd</span>
-                </div>
-                <div>
-                    <nav class="config_nav" id="AAAA">
-                        <a href="#" class="opt" onclick="setNoteName(this)">
-                            <span class="material-symbols-outlined">edit</span>
-                        </a>
-                        <a href="#" class="opt" onclick="deleteNote(this)">
-                            <span class="material-symbols-outlined">delete</span>
-                        </a>
-                        <a href="#" class="opt" onclick="downloadNote(this)">
-                            <span class="material-symbols-outlined">download</span>
-                        </a>
-                    </nav>
-                </div>
-            </div>
+            <p id="no_notes">Sem Notas</p>
+           
         </div>
     </section>
 
